# pyfragments

./: .gitignore  .nojekyll  .pre-commit-config.yaml  CHANGELOG  README.md  environment.yml  index.html  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: _quarto.yml  index.qmd
docs/examples/: animated_figure.qmd  animated_png.qmd  animated_svg.qmd
examples/: animated_figure.html  animated_figure.qmd  animated_png.html  animated_svg.html  animated_svg.qmd
src/pyfragments/: __init__.py  svg.py
src/pyfragments/examples/: animated_figure.qmd
src/pyfragments/tests/: test_svg.py  test_warning.py
